k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-docker-demo
  labels:
    app: docker-demo
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: docker-demo
